--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "validator": "^13.7.0"
   }
 }
